# Ajisai

./: .gitignore  ADOPTION_STRATEGY.md  CLAUDE.md  CLAUDECODE_HANDOVER.md  HANDOVER.md  MEDIANSORT_ALGORITHM.md  OPTIMIZATION_REPORT.md  PORTABILITY.md  README.html  README.md  SKILL.md  SPECIFICATION-NEXT.html  SPECIFICATION.html  SPECIFICATION.md  TAIL_RECURSION_ANALYSIS.md  THIRD-PARTY-LICENSES.md  THREE_VALUED_LOGIC.md  VECTOR_BRACKET_DISPLAY.md  app-interface.css  custom-word-guard-test.ajisai  debug-borders.css  eslint.config.js  index.html  language-reference-playground.html  manifest.json  no-change-error-test.ajisai  package.json  performance-optimization-report.md  project-handover-notes.md  reference.html  service-worker.js  style.css  tail-recursion-test.ajisai  tauri.html  test_cast.ajisai  test_guard_custom_word.ajisai  test_no_change_error.ajisai  test_range_count.ajisai  test_sort.ajisai  test_tail_recursion.ajisai  (+3 more)
rust/: Cargo.toml  bench_after_fraction.txt  benchmark-after-all-optimizations.txt  benchmark-baseline.txt  vite.config.ts
rust/.cargo/: config.toml
rust/benches/: README.md  bottleneck.rs  interpreter-performance-benchmarks.rs  interpreter_operations.rs  value_operations.rs
rust/examples/: record_shape_bench.rs  shape_ic_bench.rs  sqrt_cf_bench.rs  tail_call_bench.rs  vector_literal_bench.rs
rust/scripts/: update-bench-baseline.sh
rust/src/: arithmetic-operation-tests.rs  arithmetic_operation_tests.rs  builtins.rs  cf.rs  conformance_tests.rs  core_word_aliases.rs  coreword_registry.rs  dimension-limit-tests.rs  dimension_limit_tests.rs  error.rs  extreme_index_tests.rs  interpreter.rs  json-io-tests.rs  json_io_tests.rs  json_semantic_role_tests.rs  lib.rs  materialization_limit_tests.rs  operator.rs  parser.rs  rational.rs  role_ownership_tests.rs  runtime_limits_tests.rs  stack_render_tests.rs  surface_forms.rs  tensor-operation-tests.rs  tensor_operation_tests.rs  test_tokenizer.rs  tests.rs  tokenizer-mcdc-tests.rs  tokenizer-regression-tests-2.rs  tokenizer-regression-tests.rs  tokenizer.rs  tokenizer_mcdc_tests.rs  tokenizer_regression_tests.rs  tokenizer_regression_tests_2.rs  trie_store.rs  types.rs  value.rs  vent_flow_canonical_tests.rs  vstack.rs  (+6 more)
rust/src/builtins/: builtin-word-definitions.rs  builtin-word-details.rs  builtin_word_definitions.rs  builtin_word_details.rs  builtin_word_details_tests.rs  builtin_word_lookup_docs.rs  builtin_word_types.rs  definitions.rs  detail-lookup-arithmetic-logic.rs  detail-lookup-cond.rs  detail-lookup-control-higher-order.rs  detail-lookup-io-module.rs  detail-lookup-modifier.rs  detail-lookup-string-cast.rs  detail-lookup-vector-ops.rs  details.rs  mod.rs
rust/src/cli/: clarify.rs  clarify_tests.rs  contract_decl.rs  contract_decl_tests.rs  contract_linearity.rs  contract_report.rs  contract_report_tests.rs  contract_space.rs  coverage.rs  coverage_tests.rs  explain.rs  explain_tests.rs  fmt.rs  host.rs  lockfile.rs  manifest.rs  manifest_tests.rs  mod.rs  modifier.rs  modifier_tests.rs  new_project.rs  plan_check.rs  plan_check_tests.rs  project.rs  project_tests.rs  receipt.rs  receipt_tests.rs  repl.rs  report.rs  report_tests.rs  run_render.rs  step_limit_tests.rs  test_runner.rs
rust/src/components/: AjisaiGui.tsx
rust/src/elastic/: cache_manager.rs  elastic-engine-tests.rs  elastic_engine_tests.rs  evaluation_unit.rs  execution_mode.rs  fallback_bridge.rs  hedged_executor.rs  hedged_policy.rs  hedged_result.rs  hedged_snapshot.rs  hedged_trace.rs  mod.rs  purity_table.rs  tracer.rs
rust/src/interpreter/: algo_ops.rs  algo_ops_tests.rs  arithmetic.rs  arithmetic_exact_div_tests.rs  artifact_reuse_tests.rs  artifact_store.rs  artifact_store_tests.rs  audio.rs  bloom.rs  cast-chars-join.rs  cast-conversion-tests.rs  cast-conversions.rs  cast-value-helpers.rs  cast.rs  category.rs  child-runtime-tests.rs  child-runtime.rs  child_runtime.rs  child_runtime_tests.rs  comparison.rs  compiled-plan-tests.rs  compiled-plan.rs  compiled_call.rs  compiled_clause_tests.rs  compiled_plan.rs  compiled_plan_tests.rs  cond_dispatch_tests.rs  control-cond-tests.rs  control-cond.rs  control-exec-eval-tests.rs  control-tests.rs  control.rs  control_cond.rs  control_cond_tests.rs  control_exec_eval_tests.rs  control_or_else_tests.rs  core-word-canonicalization-tests.rs  core_word_canonicalization_tests.rs  coreword-registry-import-compat-tests.rs  data_ops.rs  (+151 more)
rust/src/markdown/: ast.rs  converter.rs  mod.rs  parser.rs
rust/src/semantic/: absence.rs  absence_metadata_tests.rs  capability.rs  mod.rs  protocol.rs  protocol_string_tests.rs  value_axes.rs
rust/src/types/: arena.rs  continued_fraction.rs  display.rs  flow-token.rs  fraction-arithmetic.rs  fraction-mcdc-tests.rs  fraction.rs  fraction_arithmetic.rs  fraction_mcdc_tests.rs  interval.rs  json.rs  mod.rs  multiquadratic.rs  multiquadratic_tests.rs  record_shape.rs  semantic_stack.rs  stack.rs  tensor.rs  value-operations.rs  value_operations.rs  value_persist.rs  value_persist_tests.rs  value_protocol.rs  value_protocol_tests.rs
rust/src/wasm_interpreter_bindings/: mod.rs  wasm_interpreter_execution.rs  wasm_interpreter_state.rs  wasm_runtime_metrics.rs  wasm_value_conversion.rs
rust/tests/: algebraic_laws.rs  child_runtime_laws.rs  contract_modifier_laws.rs  desugar_laws.rs  effect_observation_laws.proptest-regressions  effect_observation_laws.rs  fractional-dataflow-behavior-tests.rs  fractional_dataflow_tests.rs  gui-interpreter-test-cases.rs  gui_test_cases.rs  higher_order_laws.rs  mass_conservation_laws.rs  minimal_core_derivation.rs  naming_resolution_laws.rs  nicf_feasibility.rs  nicf_gosper_feasibility.rs  observation_laws.proptest-regressions  observation_laws.rs  record_laws.rs  string_laws.rs  structural_laws.rs
rust/tests/test_support/: generators.rs  mod.rs  observe.rs
rust/wasm-tests/: Cargo.toml  lib.rs
rust/wasm-tests/tests/: boundary.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  serial.rs
(+564 files in other folders)
