[package]
name = "ajisai-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
chrono = { version = "0.4", features = ["wasmbind"] }
getrandom = { version = "0.2", features = ["js"] }
lazy_static = "1.4"
smallvec = "1"

[dependencies.web-sys]
version = "0.3"
features = ["console", "Window", "CustomEvent", "EventTarget", "Event"]

[features]
trace-compile = []
trace-epoch = []
trace-quant = []
force-no-quant = []

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "interpreter-performance-benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os"]
