[package]
name = "ajisai-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Headless agent-facing CLI (docs/dev/agent-cli-output-contract.md).
# Builds with the default native features (std + hosted); never depends on
# the wasm feature.
[[bin]]
name = "ajisai"
path = "src/bin/ajisai.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
serde_json = "1.0"
lazy_static = "1.4"
smallvec = "1"
# chrono was previously declared but is unused: NOW reads the host clock
# directly (js Date.now / std SystemTime, see interpreter/datetime.rs) and all
# civil <-> instant conversion is host-independent exact-rational arithmetic in
# time_ops/time_calendar. Removed to keep Core dependency-light.

wasm-bindgen = { version = "0.2", features = ["serde-serialize"], optional = true }
js-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", optional = true }

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["console", "Window", "CustomEvent", "EventTarget", "Event"]

[features]
# default keeps the native std + hosted build. hosted is included so that
# CSPRNG (a Hosted capability) and the existing native test suite still build
# and run under a plain `cargo test`. The portability template's bare
# default=["std"] would drop `getrandom` and fail to compile interpreter/random.rs.
default = ["std", "hosted"]
std = []
# hosted: ネイティブ std 環境では getrandom は OS バックエンドで動作する。
# wasm 環境では getrandom/js を使う（wasm feature 側で指定）。
hosted = ["std", "dep:getrandom"]
wasm = [
  "std", "hosted",
  "dep:wasm-bindgen", "dep:js-sys", "dep:serde-wasm-bindgen",
  "dep:wasm-bindgen-futures", "dep:console_error_panic_hook", "dep:web-sys",
  "getrandom/js",
]
trace-compile = []
trace-epoch = []
trace-quant = []
force-no-quant = []

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "interpreter-performance-benchmarks"
harness = false

[profile.release]
lto = true
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3"]
