# Standalone (non-workspace) crate that exists solely to run wasm-bindgen
# tests against the real WASM boundary of ajisai-core. It is deliberately
# separate from the main `rust` package because that package's dev-deps
# (notably proptest -> getrandom 0.3) do not compile for
# wasm32-unknown-unknown, which would block building any test target there.
# This crate's graph is just ajisai-core + the wasm-bindgen toolchain.
#
# Run: cd rust/wasm-tests && wasm-pack test --node
[package]
name = "ajisai-wasm-tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "lib.rs"

[dependencies]
ajisai-core = { path = ".." }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
